# negotiator

./: .gitignore  README.md  pyproject.toml
configs/: ergodic_tag.yaml
negotiator/: __init__.py  agents.py  config.py  domain.py  env.py  metrics.py  opponents.py  policies.py  training.py  wealth.py
scripts/: run_training.py  train.py
src/ergodic_negotiator/: __init__.py  agents.py  config.py  domain.py  env.py  policies.py  training.py  wealth.py
src/negotiator/: __init__.py  version.py
src/negotiator/agents/: __init__.py  rl_negotiator.py
src/negotiator/config/: __init__.py  schema.py
src/negotiator/domain/: __init__.py  builder.py
src/negotiator/opponents/: __init__.py  baselines.py
src/negotiator/policies/: __init__.py  policy.py
src/negotiator/training/: __init__.py  runner.py
src/negotiator/utils/: __init__.py  wealth.py
tests/: test_env.py  test_environment.py  test_integration.py  test_wealth.py
